--- a/JavaScript/EJ4.html
+++ b/JavaScript/EJ4.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ej3</title>
+    <title>Ej4</title>
 </head>
 <body>
-    <h1 id="h1"> <strong>EDAD?</strong> </h1><br>
+    <h1 id="h1"> <str ong>ingrese S / N?</strong> </h1><br>
     <input id="ibox1"/>
 
     <p id="p1">Evaluacion. Presione el boton para saber la respuesta</p>
     <button id="btn1">Resul</button>
-    <P>sLANFDA</P>
 
-<script src="Ej3.js" type="text/javascript"></script>    
+<script src="Ej4.js" type="text/javascript"></script>    
 </body>
 </html>
