--- a/JavaScript/ej9.html
+++ b/JavaScript/ej9.html
@@ -8,11 +8,12 @@
 </head>
 
 <body>
+    <pre>E    J    9</pre>
     <div class="Ejercicio 9">
         <h1 id="Encabezado1">Ingresar Frase</h1>
-        <input id="Ingreso1" value="HH" placeholder="surulang" />
+        <input id="Ingreso1" value="H  H" placeholder="surulang" />
         <button id="Boton1">SepararLetras</button>
-        <p id="Parrafo1">Resultado</p>
+        <pre id="Parrafo1">R    e     s      u      l      t      a      d    o</pre>
     </div>
 
     <script src="Ej9.js" type="text/javascript"></script>
